Trying new coordinates

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <img src="PXL_20241228_225234911.jpg" usemap="#image-map">
 
 <map name="image-map">
-    <area target="_blank" alt="Millennium Centre" title="Millennium Centre" href="https://en.wikipedia.org/wiki/Millennium_Centre_(Chicago)" coords="2686,3047,1674,0" shape="rect">
-    <area target="_blank" alt="300 North LaSalle" title="300 North LaSalle" href="https://en.wikipedia.org/wiki/300_North_LaSalle" coords="1030,1008,1343,1059,1347,1642,1260,1649,1253,1606,1149,1603,1149,1405,1037,1415" shape="poly">
+    <area target="_blank" alt="Millennium Centre" title="Millennium Centre" href="https://en.wikipedia.org/wiki/Millennium_Centre_(Chicago)" coords="1670,270,2690,3067" shape="rect">
+    <area target="_blank" alt="300 North LaSalle" title="300 North LaSalle" href="https://en.wikipedia.org/wiki/300_North_LaSalle" coords="0,0,500,500" shape="rect">
 </map>
 
 </body>
