--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 <map name="image-map">
     <area target="_blank" alt="Millennium Centre" title="Millennium Centre" href="https://en.wikipedia.org/wiki/Millennium_Centre_(Chicago)" coords="2686,3047,1674,0" shape="rect">
     <area target="_blank" alt="300 North LaSalle" title="300 North LaSalle" href="https://en.wikipedia.org/wiki/300_North_LaSalle" coords="1030,1008,1343,1059,1347,1642,1260,1649,1253,1606,1149,1603,1149,1405,1037,1415" shape="poly">
+	<area target="_blank" alt="637 N Wells" title="637 N Wells" href="https://www.magellandevelopment.com/projects/the-gallery-on-wells/" coords="3943,1510,4073,2173" shape="rect">
+	<!-- https://en.wikipedia.org/wiki/The_Pinnacle_(Chicago) https://www.skyscrapercenter.com/building/the-pinnacle/3138 NE view -->
+	<!-- https://en.wikipedia.org/wiki/The_Fordham -->
+	<!-- https://en.wikipedia.org/wiki/The_Montgomery_(Chicago) https://www.highrises.com/buildings/chicago_il/the-montgomery_500-w-superior-st_1006 NW view-->
 </map>
 
 <script>
