not sure this is going anywhere in this state

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 <body>
   <h1>Vocabulary App</h1>
 
-  <input id="word" placeholder="Word" />
-  <input id="meaning" placeholder="Meaning" />
+  <h2>Add New Word</h2>
+  <input id="hanzi" placeholder="Hanzi (你好)" />
+  <input id="pinyin" placeholder="Pinyin (nǐ hǎo)" />
+  <input id="zhuyin" placeholder="Zhuyin (ㄋㄧˇ ㄏㄠˇ)" />
+  <input id="ipa" placeholder="IPA (/ni˧˥ xaʊ˨˩˦/)" />
+  <input id="english" placeholder="English (hello)" />
   <button onclick="addWord()">Add</button>
 
   <ul id="vocabList"></ul>
