When words are wrong, make them still learning

--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
             
             // Reset correct counter and set to not_started
             wordData.correctCount = 0;
-            wordData.state = 'not_started';
+            wordData.state = 'learning';
             
 			saveToGoogleDrive();
 			
