Added support for pulling default dictionary from repo.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
             <div class="google-status" id="google-status"></div>
             
             <div style="margin: 20px 0; color: #999; font-size: 14px;">— OR —</div>
-            
+
+            <button class="load-default-btn" id="load-default-btn">
+                📚 Load Default ASL Dictionary
+            </button>
+
+            <div style="margin: 20px 0; color: #999; font-size: 14px;">— OR —</div>
+
             <div class="file-input-wrapper">
                 <label for="file-upload" class="file-button">
                     Load Dictionary from File
