Added back to languages link on ASL trainer

--- a/asl.html
+++ b/asl.html
@@ -95,6 +95,12 @@
         </div>
 
         <div class="footer-links">
+            <div class="github-link">
+                <a href="index.html">
+                    <span>←</span>
+                    <span>Back to Languages</span>
+                </a>
+            </div>
             <div class="change-dictionary-link" id="change-dictionary-link" style="display: none;">
                 <a href="#" id="change-dictionary-btn">📂 Change Dictionary</a>
             </div>
