Working on UX for pinyin entry.

--- a/chinese.html
+++ b/chinese.html
@@ -46,17 +46,17 @@
             <div class="input-section" id="input-section">
                 <div class="input-group">
                     <label id="input-label-1"></label>
-                    <input type="text" id="input-field-1" class="answer-input" />
+                    <input type="text" id="input-field-1" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
                     <div class="answer-feedback" id="feedback-1"></div>
                 </div>
                 <div class="input-group">
                     <label id="input-label-2"></label>
-                    <input type="text" id="input-field-2" class="answer-input" />
+                    <input type="text" id="input-field-2" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
                     <div class="answer-feedback" id="feedback-2"></div>
                 </div>
                 <div class="input-group">
                     <label id="input-label-3"></label>
-                    <input type="text" id="input-field-3" class="answer-input" />
+                    <input type="text" id="input-field-3" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
                     <div class="answer-feedback" id="feedback-3"></div>
                 </div>
             </div>
