very simple first draft of french vocab trainer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                 <h2>Chinese</h2>
                 <p>Mandarin Vocabulary</p>
             </a>
+
+            <a href="french.html" class="language-card french-card">
+                <div class="card-icon">🇫🇷</div>
+                <h2>French</h2>
+                <p>French Vocabulary</p>
+            </a>
         </div>
 
         <div class="footer-info">
