Add French vocabulary trainer with IPA input system
Implemented complete French trainer with the following features:
- Multi-field testing (french, IPA, english, gender)
- Real-time IPA character conversion (80+ mappings)
- Letter+number shortcuts (e.g., s1→ʃ, e2→ɛ, r4→ʁ)
- Compact IPA reference tables with dynamic positioning
- Enhanced keyboard shortcuts (Enter for check+correct, Escape for wrong)
- Auto-focus on input fields for seamless workflow
- Google Drive integration with separate storage
- 41-word starter dictionary

Files added:
- french.html - French trainer interface
- french-trainer.js - Trainer logic with IPA conversion
- french-trainer.css - French flag themed styling
- FRENCH_IMPLEMENTATION_PLAN.md - Implementation documentation
- IPA_SHORTCUTS.md - Complete IPA character reference
- frenchdict.txt - Source dictionary data

Files updated:
- README.md - Added French trainer documentation
- CLAUDE.md - Added French trainer architecture details

--- a/french.html
+++ b/french.html
@@ -44,20 +44,319 @@
             </div>
 
             <div class="input-section" id="input-section">
-                <div class="input-group">
+                <div class="input-group" id="input-group-1">
                     <label id="input-label-1"></label>
                     <input type="text" id="input-field-1" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
                     <div class="answer-feedback" id="feedback-1"></div>
                 </div>
-                <div class="input-group">
+                <div class="input-group" id="input-group-2">
                     <label id="input-label-2"></label>
                     <input type="text" id="input-field-2" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
                     <div class="answer-feedback" id="feedback-2"></div>
                 </div>
-                <div class="input-group">
+                <div class="input-group" id="input-group-3">
                     <label id="input-label-3"></label>
                     <input type="text" id="input-field-3" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
                     <div class="answer-feedback" id="feedback-3"></div>
+                </div>
+            </div>
+
+            <div class="ipa-reference" id="ipa-reference" style="display: none;">
+                <h4>IPA Shortcuts (type letter + number)</h4>
+
+                <div class="ipa-tables">
+                    <div class="ipa-table-section">
+                        <table class="ipa-compact-table">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>1</th>
+                                    <th>2</th>
+                                    <th>3</th>
+                                    <th>4</th>
+                                    <th>5</th>
+                                    <th>6</th>
+                                    <th>7</th>
+                                    <th>8</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="base-letter">a</td>
+                                    <td>ɑ</td>
+                                    <td>æ</td>
+                                    <td>ɐ</td>
+                                    <td>ɑ̃</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">b</td>
+                                    <td>β</td>
+                                    <td>ɓ</td>
+                                    <td>ʙ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">c</td>
+                                    <td>ç</td>
+                                    <td>ɕ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">d</td>
+                                    <td>ð</td>
+                                    <td>ɗ</td>
+                                    <td>ɖ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">e</td>
+                                    <td>ə</td>
+                                    <td>ɛ</td>
+                                    <td>ɜ</td>
+                                    <td>ɝ</td>
+                                    <td>ɘ</td>
+                                    <td>ɞ</td>
+                                    <td>ɛ̃</td>
+                                    <td>ɚ</td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">g</td>
+                                    <td>ɡ</td>
+                                    <td>ɠ</td>
+                                    <td>ɢ</td>
+                                    <td>ʛ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">h</td>
+                                    <td>ħ</td>
+                                    <td>ɦ</td>
+                                    <td>ɥ</td>
+                                    <td>ɧ</td>
+                                    <td>ʜ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">i</td>
+                                    <td>ɪ</td>
+                                    <td>ɨ</td>
+                                    <td>ɪ̈</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">j</td>
+                                    <td>ɟ</td>
+                                    <td>ʄ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">l</td>
+                                    <td>ɫ</td>
+                                    <td>ɭ</td>
+                                    <td>ɬ</td>
+                                    <td>ʟ</td>
+                                    <td>ɮ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">m</td>
+                                    <td>ɱ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">n</td>
+                                    <td>ŋ</td>
+                                    <td>ɲ</td>
+                                    <td>ɳ</td>
+                                    <td>ɴ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="ipa-table-section">
+                        <table class="ipa-compact-table">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>1</th>
+                                    <th>2</th>
+                                    <th>3</th>
+                                    <th>4</th>
+                                    <th>5</th>
+                                    <th>6</th>
+                                    <th>7</th>
+                                    <th>8</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="base-letter">o</td>
+                                    <td>ɔ</td>
+                                    <td>ɔ̃</td>
+                                    <td>ø</td>
+                                    <td>œ</td>
+                                    <td>ɶ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">p</td>
+                                    <td>ɸ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">r</td>
+                                    <td>ɾ</td>
+                                    <td>ɹ</td>
+                                    <td>ʀ</td>
+                                    <td>ʁ</td>
+                                    <td>ɼ</td>
+                                    <td>ɽ</td>
+                                    <td>ɺ</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">s</td>
+                                    <td>ʃ</td>
+                                    <td>ʂ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">t</td>
+                                    <td>θ</td>
+                                    <td>ʈ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">u</td>
+                                    <td>ʊ</td>
+                                    <td>ʉ</td>
+                                    <td>ɥ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">v</td>
+                                    <td>ʌ</td>
+                                    <td>ʋ</td>
+                                    <td>ⱱ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">w</td>
+                                    <td>ʍ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">x</td>
+                                    <td>χ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">y</td>
+                                    <td>ʏ</td>
+                                    <td>ʎ</td>
+                                    <td>ɣ</td>
+                                    <td>ɤ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="base-letter">z</td>
+                                    <td>ʒ</td>
+                                    <td>ʐ</td>
+                                    <td>ʑ</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
