--- a/french.html
+++ b/french.html
@@ -44,20 +44,25 @@
             </div>
 
             <div class="input-section" id="input-section">
-                <div class="input-group" id="input-group-1">
-                    <label id="input-label-1"></label>
-                    <input type="text" id="input-field-1" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-                    <div class="answer-feedback" id="feedback-1"></div>
+                <div class="input-group" id="input-group-article">
+                    <label>Article (le/la)</label>
+                    <input type="text" id="input-field-article" class="answer-input article-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="answer-feedback" id="feedback-article"></div>
                 </div>
-                <div class="input-group" id="input-group-2">
-                    <label id="input-label-2"></label>
-                    <input type="text" id="input-field-2" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-                    <div class="answer-feedback" id="feedback-2"></div>
+                <div class="input-group" id="input-group-french">
+                    <label>French</label>
+                    <input type="text" id="input-field-french" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="answer-feedback" id="feedback-french"></div>
                 </div>
-                <div class="input-group" id="input-group-3">
-                    <label id="input-label-3"></label>
-                    <input type="text" id="input-field-3" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-                    <div class="answer-feedback" id="feedback-3"></div>
+                <div class="input-group" id="input-group-ipa">
+                    <label>IPA</label>
+                    <input type="text" id="input-field-ipa" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="answer-feedback" id="feedback-ipa"></div>
+                </div>
+                <div class="input-group" id="input-group-english">
+                    <label>English</label>
+                    <input type="text" id="input-field-english" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="answer-feedback" id="feedback-english"></div>
                 </div>
             </div>
 
