Add hanzi multiple choice in Chinese trainer
- 5x2 grid of hanzi options instead of text input
- Correct answer plus 9 random distractors from dictionary
- Click to select, visual feedback on check
- Pinyin/zhuyin/english remain text inputs

--- a/chinese.html
+++ b/chinese.html
@@ -44,19 +44,22 @@
             </div>
 
             <div class="input-section" id="input-section">
-                <div class="input-group">
+                <div class="input-group" id="input-group-1">
                     <label id="input-label-1"></label>
                     <input type="text" id="input-field-1" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="hanzi-choices" id="hanzi-choices-1" style="display: none;"></div>
                     <div class="answer-feedback" id="feedback-1"></div>
                 </div>
-                <div class="input-group">
+                <div class="input-group" id="input-group-2">
                     <label id="input-label-2"></label>
                     <input type="text" id="input-field-2" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="hanzi-choices" id="hanzi-choices-2" style="display: none;"></div>
                     <div class="answer-feedback" id="feedback-2"></div>
                 </div>
-                <div class="input-group">
+                <div class="input-group" id="input-group-3">
                     <label id="input-label-3"></label>
                     <input type="text" id="input-field-3" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="hanzi-choices" id="hanzi-choices-3" style="display: none;"></div>
                     <div class="answer-feedback" id="feedback-3"></div>
                 </div>
             </div>
