--- a/chinese.html
+++ b/chinese.html
@@ -130,6 +130,7 @@
         </div>
     </div>
 
+    <script src="auth.js"></script>
     <script src="chinese-trainer.js"></script>
 </body>
 </html>
