--- a/french.html
+++ b/french.html
@@ -431,6 +431,7 @@
         </div>
     </div>
 
+    <script src="auth.js"></script>
     <script src="french-trainer.js"></script>
 </body>
 </html>
