--- a/chinese.html
+++ b/chinese.html
@@ -62,6 +62,12 @@
                     <div class="hanzi-choices" id="hanzi-choices-3" style="display: none;"></div>
                     <div class="answer-feedback" id="feedback-3"></div>
                 </div>
+                <div class="input-group" id="input-group-4">
+                    <label id="input-label-4"></label>
+                    <input type="text" id="input-field-4" class="answer-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                    <div class="hanzi-choices" id="hanzi-choices-4" style="display: none;"></div>
+                    <div class="answer-feedback" id="feedback-4"></div>
+                </div>
             </div>
 
             <div class="action-buttons">
@@ -131,6 +137,7 @@
     </div>
 
     <script src="auth.js"></script>
+    <script src="ipa-converter.js"></script>
     <script src="chinese-trainer.js"></script>
 </body>
 </html>
