--- a/french.html
+++ b/french.html
@@ -432,6 +432,7 @@
     </div>
 
     <script src="auth.js"></script>
+    <script src="ipa-converter.js"></script>
     <script src="french-trainer.js"></script>
 </body>
 </html>
