Add automatic dictionary sync system
- Create dict-merge.js module for merging repo and user dictionaries
- Auto-merge on load from Google Drive or file upload
- Preserve user progress (state, correctCount) while applying repo updates
- Add new words from repo with state=not_started
- Show merge stats in status messages
- Apply to all three trainers (ASL, Chinese, French)
- Silent fallback if GitHub fetch fails

--- a/chinese.html
+++ b/chinese.html
@@ -164,6 +164,7 @@
 
     <script src="auth.js"></script>
     <script src="ipa-converter.js"></script>
+    <script src="dict-merge.js"></script>
     <script src="chinese-trainer.js"></script>
 </body>
 </html>
