--- a/asl.html
+++ b/asl.html
@@ -114,6 +114,7 @@
     </div>
 
     <script src="auth.js"></script>
+    <script src="dict-merge.js"></script>
     <script src="asl-trainer.js"></script>
 </body>
 </html>
