--- a/french.html
+++ b/french.html
@@ -137,6 +137,7 @@
 
     <script src="auth.js"></script>
     <script src="ipa-converter.js"></script>
+    <script src="dict-merge.js"></script>
     <script src="french-trainer.js"></script>
 </body>
 </html>
