--- a/chinese.html
+++ b/chinese.html
@@ -195,6 +195,7 @@
 
     <script src="auth.js"></script>
     <script src="ipa-converter.js"></script>
+    <script src="field-components.js"></script>
     <script src="dict-merge.js"></script>
     <script src="dict-lookup.js"></script>
     <script src="pinyin-converter.js"></script>
